--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="azista.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="This App Traack AWS Stations Live Data" />
-    <link rel="apple-touch-icon" href="azista.png" />
+    <meta
+      name="description"
+      content="Vision. Design, Development, Manufacturing & Integration of Satellite, Spaceborne systems, Payloads and Satellite-Enabled Ground Systems including SATCOM and Hydrometeorology sensors and stations"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/azista.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -41,7 +44,11 @@
     <title>Azista Aerospace-AWS</title>
   </head>
   <body>
-    <noscript>This App Track AWS Stations Live Data</noscript>
+    <noscript
+      >Vision. Design, Development, Manufacturing & Integration of Satellite,
+      Spaceborne systems, Payloads and Satellite-Enabled Ground Systems
+      including SATCOM and Hydrometeorology sensors and stations</noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
